--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   db:
     image: postgres:15.2
     environment:
-      POSTGRES_USER: statistic_user
-      POSTGRES_PASSWORD: myhardpassword1234
+      POSTGRES_USER: your_postgres_user
+      POSTGRES_PASSWORD: your_postgres_password
       POSTGRES_DB: Statistic
     volumes:
       - postgres_data:/var/lib/postgresql/data
